# forge

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  drum_map.json  lotro-abc-converter-spec.md  run-ui.sh
.github/workflows/: windows-build.yml
Source/: Main.cpp
Source/Cli/: CliOptions.cpp  CliOptions.h  DrumMapLoader.cpp  DrumMapLoader.h
Source/Core/: AbcWriter.cpp  AbcWriter.h  AutoInstrument.cpp  AutoInstrument.h  Config.cpp  Config.h  ConfigLoader.cpp  ConfigLoader.h  ConfigWriter.cpp  ConfigWriter.h  Diagnostics.h  DrumMap.cpp  DrumMap.h  DrumMapLoader.h  InstrumentAssembly.cpp  InstrumentAssembly.h  LotroInstrument.cpp  LotroInstrument.h  MidiImporter.cpp  MidiImporter.h  Note.h  Pipeline.cpp  Pipeline.h  Song.h  Track.h
Source/Core/Constraints/: ChordConstraint.cpp  ChordConstraint.h  CollisionGuard.cpp  CollisionGuard.h  DurationConstraint.cpp  DurationConstraint.h  DynamicMapper.cpp  DynamicMapper.h  RangeConstraint.cpp  RangeConstraint.h  TempoCollapse.cpp  TempoCollapse.h
Source/UI/: AbcPreviewView.cpp  AbcPreviewView.h  DiagnosticListView.cpp  DiagnosticListView.h  DiagnosticsPane.cpp  DiagnosticsPane.h  EditorPane.cpp  EditorPane.h  GlobalSettingsView.cpp  GlobalSettingsView.h  InstrumentDetailForm.cpp  InstrumentDetailForm.h  InstrumentPropertyPage.cpp  InstrumentPropertyPage.h  InstrumentsTable.cpp  InstrumentsTable.h  InstrumentsTree.cpp  InstrumentsTree.h  MainWindow.cpp  MainWindow.h  PropertyPageHost.cpp  PropertyPageHost.h  SongPropertyPage.cpp  SongPropertyPage.h  SourcePropertyPage.cpp  SourcePropertyPage.h  UiMain.cpp
Tests/: AbcWriterConfig_tests.cpp  AbcWriter_tests.cpp  AutoInstrument_tests.cpp  BarAlignment_tests.cpp  CMakeLists.txt  ChordConstraint_tests.cpp  CollisionGuard_tests.cpp  ConfigLoaderToml_tests.cpp  ConfigLoaderXml_tests.cpp  ConfigLoader_tests.cpp  ConfigPipeline_tests.cpp  ConfigWriter_tests.cpp  Config_tests.cpp  DrumMap_tests.cpp  DurationConstraint_tests.cpp  DynamicMapper_tests.cpp  EndToEndConfig_tests.cpp  EndToEnd_tests.cpp  InstrumentAssembly_tests.cpp  MidiImporter_tests.cpp  Pipeline_tests.cpp  Provenance_tests.cpp  RangeConstraint_tests.cpp  TempoCollapse_tests.cpp  TempoPipeline_tests.cpp  smoke_test.cpp
cmake/: mingw-w64-toolchain.cmake
docs/: ARCHITECTURE.md  UI_GUIDE.md
docs/superpowers/plans/: 2026-04-23-config-driven-conversion.md  2026-04-23-config-editor-ui.md  2026-04-23-instruments-treeview-redesign.md
docs/superpowers/specs/: 2026-04-23-config-driven-conversion-design.md  2026-04-23-config-editor-ui-design.md  2026-04-23-instruments-treeview-redesign-design.md
drummaps/: cymbals.txt  default.txt  drums.txt
findings/: drum-timing.md  dynamics.md
midi/: Barnes Brothers Band - Pull The Wires.mid  anymore.mid  blue.mid  hold.mid  land.mid  leah.mid  nobody.mid  right.mid  tellit.mid
transport/: drum_map.json
transport/Source/Cli/: DrumMapLoader.cpp
